manifests/bns/base/bns-faucet.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bns-faucet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bns-faucet
  template:
    metadata:
      labels:
        app: bns-faucet
    spec:
      containers:
      - name: bns-faucet
        image: iov1/iov-faucet:v0.5.1
        imagePullPolicy: Always
        args:
          - start
          - bns
          - ws://bns.default.svc.cluster.local:26657
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: bns-faucet
spec:
  selector:
    app: bns-faucet
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
