manifests/bns/base/bns-validator.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: bns
  labels:
    app: bns
    component: validator
spec:
  ports:
  - port: 26656
    name: p2p
  - port: 26657
    name: rpc
  selector:
    app: bns
    component: validator
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bns
  labels:
    app: bns
    component: validator
spec:
  serviceName: bns  
  replicas: 1
  selector:
    matchLabels:
      app: bns
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: bns
        component: validator
        clusterName: bns
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values: [bns]
            topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 10
      containers:
      - name: tendermint
        imagePullPolicy: IfNotPresent
        image: iov1/tendermint:0.25.0
        ports:
        - containerPort: 26656
          name: p2p
        - containerPort: 26657
          name: rpc
        command:
        - bash
        - "-c"
        - |
          set -exo pipefail

          # wait for bns to get started
          while [ ! -S /socks/app.sock ]; do
            sleep 1
          done

          exec tendermint node \
            --moniker="`hostname`" \
            --log_level="p2p:info,state:info,*:error" \
            --proxy_app="unix:///socks/app.sock"
        volumeMounts:
        - name: tmdir
          mountPath: /data/tendermint
          subPath: tendermint
        - mountPath: /etc/tendermint/genesis.json
          name: tm-initialization
          subPath: genesis.json
          readOnly: true
        - mountPath: /etc/tendermint/config.toml
          name: tm-configuration
          subPath: config.toml
          readOnly: true
        - name: socksdir
          mountPath: /socks
        - name: tm-rw-volume
          mountPath: /tmp
        resources:
          limits:
            cpu: 1100m
            memory: 4Gi
          requests:
            cpu: 750m
            memory: 2Gi
        readinessProbe:
          exec:
            command:
            - sh
            - -o
            - pipefail
            - -ec
            - 'curl -s --fail http://localhost:26657/status | jq --exit-status ".result.sync_info.catching_up==false"'
          failureThreshold: 999999
          periodSeconds: 20
          initialDelaySeconds: 40
        livenessProbe:
          exec:
            command:
            - sh
            - -o
            - pipefail
            - -ec
            - 'curl -s --fail http://localhost:26657/abci_info | jq --exit-status ".result.response"'
          failureThreshold: 3
          initialDelaySeconds: 40
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 2
      - name: bns
        imagePullPolicy: IfNotPresent
        image: iov1/bnsd:v0.12.0
        args:
          - '-home=/data/bns'
          - start
          - '-bind=unix:///socks/app.sock'
        volumeMounts:
        - name: socksdir
          mountPath: /socks
        - name: tmdir
          mountPath: /data/bns
          subPath: bns
        resources:
          limits:
            cpu: 1100m
            memory: 2.5Gi
          requests:
            cpu: 550m
            memory: 512Mi
      volumes:
      - name: tm-initialization
        configMap:
          name: tm-bns-init-config
      - name: tm-configuration
        configMap:
          name: bns-tendermint-config
      - name: socksdir
        emptyDir: {}
      - name: tm-rw-volume
        emptyDir: {}
      - name: nginx-rw-volume
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: tmdir
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: standard
      resources:
        requests:
          storage: 30Gi
