manifests/bns/base/bns-faucet-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bns-faucet
spec:
  rules:
  - host: bns-faucet.example.com
    http:
      paths:
      - backend:
          serviceName: bns-faucet
          servicePort: http
